deploy/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  labels:
    app: blog
spec:
  ports:
  - port: 1313
    name: blog
  clusterIP: None
  selector:
    app: blog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  selector:
    matchLabels:
      app: blog
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: blog
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: blog
        command:
        - hugo
        - server
        - -D
        - -e
        - production
        image: lyr8200/blog:v2022.07.01
        imagePullPolicy: Always
        ports:
        - containerPort: 1313
          name: blog
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-server-ingress
  namespace: blog
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"    # 开启证书
spec:
  rules:
  - host: www.lyrzyh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-service
            port:
              name: blog
