deploy/remarkdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remark42
  namespace: blog
  labels:
    app: remark42
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remark42
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: blog
      labels:
        app: remark42
    spec:
      containers:
        - name: remark42
          image: umputun/remark42:v1.8.1
          ports:
            # http:
            - containerPort: 8080
          volumeMounts:
            - name: srvvar
              mountPath: /srv/var
          securityContext:
            readOnlyRootFilesystem: false
          resources:
            requests:
              cpu: "100m"
              memory: "25Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      volumes:
        - name: srvvar
          persistentVolumeClaim:
            claimName: remark42
---
apiVersion: v1
kind: Service
metadata:
  name: remark42-web
  namespace: blog
spec:
  selector:
    app: remark42
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: remark42-ingress
  namespace: blog
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "true"    # 开启证书
spec:
  rules:
    - host: "remark.lyrzyh.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: remark42-web
              servicePort: 8080
